--- a/package.json
+++ b/package.json
@@ -15,13 +15,19 @@
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.2",
     "connect-flash": "^0.1.1",
+    "cookie-session": "^2.0.0",
     "dotenv": "^16.0.0",
     "ejs": "^3.1.6",
     "express": "^4.17.3",
     "jsonwebtoken": "^8.5.1",
     "jwt-simple": "^0.5.6",
     "mongoose": "^6.2.6",
-    "passport": "^0.5.2"
+    "passport": "^0.5.2",
+    "passport-facebook": "^3.0.0",
+    "passport-google-oauth2": "^0.2.0",
+    "passport-linkedin-oauth2": "^2.0.0",
+    "passport-twitter": "^1.0.4",
+    "query-string": "^7.1.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
